[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/autoloads/keybinds.gd" type="Script" id=1]

[node name="Keybinds" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="PopupPanel" type="PopupPanel" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -150.0
margin_right = 256.0
margin_bottom = 150.0
rect_min_size = Vector2( 512, 300 )
__meta__ = {
"_edit_lock_": true
}

[node name="ScrollContainer" type="ScrollContainer" parent="PopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel/ScrollContainer"]
margin_right = 504.0
margin_bottom = 292.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="PopupPanel/ScrollContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 504.0
margin_bottom = 108.0

[node name="Label" type="Label" parent="PopupPanel/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 250.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Move Left"
align = 1

[node name="MoveLeft" type="Button" parent="PopupPanel/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 254.0
margin_right = 504.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "A"

[node name="HBoxContainer2" type="HBoxContainer" parent="PopupPanel/ScrollContainer/VBoxContainer"]
margin_top = 112.0
margin_right = 504.0
margin_bottom = 132.0

[node name="Label" type="Label" parent="PopupPanel/ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_top = 3.0
margin_right = 250.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Move Right"
align = 1

[node name="MoveRight" type="Button" parent="PopupPanel/ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_left = 254.0
margin_right = 504.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "D"

[node name="HBoxContainer3" type="HBoxContainer" parent="PopupPanel/ScrollContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 504.0
margin_bottom = 156.0

[node name="Label" type="Label" parent="PopupPanel/ScrollContainer/VBoxContainer/HBoxContainer3"]
margin_top = 3.0
margin_right = 250.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Move Up"
align = 1

[node name="MoveUp" type="Button" parent="PopupPanel/ScrollContainer/VBoxContainer/HBoxContainer3"]
margin_left = 254.0
margin_right = 504.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "W"

[node name="HBoxContainer4" type="HBoxContainer" parent="PopupPanel/ScrollContainer/VBoxContainer"]
margin_top = 160.0
margin_right = 504.0
margin_bottom = 180.0

[node name="Label" type="Label" parent="PopupPanel/ScrollContainer/VBoxContainer/HBoxContainer4"]
margin_top = 3.0
margin_right = 250.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Move Down"
align = 1

[node name="MoveDown" type="Button" parent="PopupPanel/ScrollContainer/VBoxContainer/HBoxContainer4"]
margin_left = 254.0
margin_right = 504.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "S"

[node name="HBoxContainer5" type="HBoxContainer" parent="PopupPanel/ScrollContainer/VBoxContainer"]
margin_top = 184.0
margin_right = 504.0
margin_bottom = 204.0

[node name="Label" type="Label" parent="PopupPanel/ScrollContainer/VBoxContainer/HBoxContainer5"]
margin_top = 3.0
margin_right = 250.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Jump"
align = 1

[node name="Jump" type="Button" parent="PopupPanel/ScrollContainer/VBoxContainer/HBoxContainer5"]
margin_left = 254.0
margin_right = 504.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Space"

[connection signal="popup_hide" from="PopupPanel" to="." method="_on_PopupPanel_popup_hide"]
